[package]
name = "blog-parser-post-org"
version = "0.1.0"
authors = ["Jakub Šťastný <jakub-stastny@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
